// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfo /> should display error if contrat cdd 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c2 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c2:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c2:checked:before {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {

}

@media (max-width:600px) {

}

<div
  class="c0"
>
  <label
    class="c1"
    for="contrat-cdd"
  >
    <input
      class="c2"
      id="contrat-cdd"
      name="contrat"
      type="radio"
      value="cdd"
    />
    Contrat à durée determiné (CDD) ou contrat d’intérim
  </label>
  <label
    class="c1"
    for="contrat-cdi"
  >
    <input
      checked=""
      class="c2"
      id="contrat-cdi"
      name="contrat"
      type="radio"
      value="cdi"
    />
    Contrat à durée indeterminé (CDI)
  </label>
  L’indemnité de licenciement n’est pas dûe pour les CDD et contrats de travail temporaires. Sous certaines conditions, le salarié peut avoir le droit à une 
  <a
    aria-label="indemnité de précarité (nouvelle fenêtre) (nouvelle fenêtre)"
    el="noopener noreferrer"
    href="/fiche-service-public/qui-peut-toucher-la-prime-de-precarite-a-la-fin-dun-contrat-de-travail"
    target="_blank"
  >
    indemnité de précarité (nouvelle fenêtre)
  </a>
  .
</div>
`;

exports[`<StepInfo /> should display error if fauteGrave 1`] = `
@media (max-width:600px) {

}

@media (max-width:600px) {

}

<b>
  L’indemnité légale de licenciement n’est pas dûe en cas de faute grave.
</b>
`;

exports[`<StepInfo /> should render 1`] = `
.c4 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c0 {
  border: 0;
  margin: 0;
  padding: 0;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
  display: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c7 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c7:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c7:checked:before {
  display: block;
}

.c2 {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c8 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c3 {
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.6rem;
  }
}

<div>
  <form>
    <fieldset
      class="c0"
    >
       
      <legend
        class="c1"
      >
        Contrat de travail
      </legend>
      <p
        class="c2"
      >
        <span
          class="c3"
        >
          Quel est le type du contrat de travail ?
        </span>
        <span
          class="c4"
        >
           (obligatoire)
        </span>
      </p>
      <div
        class="c5"
      >
        <label
          class="c6"
          for="contrat-cdd"
        >
          <input
            class="c7"
            id="contrat-cdd"
            name="contrat"
            type="radio"
            value="cdd"
          />
          Contrat à durée determiné (CDD) ou contrat d’intérim
        </label>
        <label
          class="c6"
          for="contrat-cdi"
        >
          <input
            class="c7"
            id="contrat-cdi"
            name="contrat"
            type="radio"
            value="cdi"
          />
          Contrat à durée indeterminé (CDI)
        </label>
      </div>
      <p
        class="c8"
      >
        <span
          class="c3"
        >
          Le licenciement est-il dû à une faute grave (ou lourde) ?
        </span>
        <span
          class="c4"
        >
           (obligatoire)
        </span>
      </p>
      <div
        class="c5"
      >
        <label
          class="c6"
          for="fauteGrave-oui"
        >
          <input
            class="c7"
            id="fauteGrave-oui"
            name="fauteGrave"
            type="radio"
            value="true"
          />
          Oui
        </label>
        <label
          class="c6"
          for="fauteGrave-non"
        >
          <input
            class="c7"
            id="fauteGrave-non"
            name="fauteGrave"
            type="radio"
            value="false"
          />
          Non
        </label>
      </div>
      <p
        class="c8"
      >
        <span
          class="c3"
        >
          Le licenciement est-il dû à une inaptitude suite à un accident du travail ou maladie professionnelle reconnue ?
        </span>
        <span
          class="c4"
        >
           (obligatoire)
        </span>
      </p>
      <div
        class="c5"
      >
        <label
          class="c6"
          for="inaptitude-oui"
        >
          <input
            class="c7"
            id="inaptitude-oui"
            name="inaptitude"
            type="radio"
            value="true"
          />
          Oui
        </label>
        <label
          class="c6"
          for="inaptitude-non"
        >
          <input
            class="c7"
            id="inaptitude-non"
            name="inaptitude"
            type="radio"
            value="false"
          />
          Non
        </label>
      </div>
    </fieldset>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
